# ml-project-group

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  main.py  mock_submission_demo.py  pyproject.toml  run_overnight.sh
analysis/: ANNOTATION_QUALITY_REPORT.md  DATA_ANALYSIS_REPORT.md  annotation_quality_check.py  check_image_dims.py  data_analysis.py  llm_labeling_analysis.md
archive/training/: train_phase2_revised.py
configs/: dataset_fold_0.yaml  dataset_fold_1.yaml  dataset_fold_2.yaml
configs/experiments/: exp01_yolov5_baseline.yaml  exp02_yolov11_baseline.yaml  exp03_conf_sweep.yaml  exp04_iou_sweep.yaml  exp05_resolution_scaling.yaml  exp06_hp_sweep.yaml  exp06_sahi_inference.yaml  exp07_bytetrack.yaml  exp08_sahi_bytetrack.yaml  exp09_f2_optimized.yaml  exp10_extended_training.yaml  exp_best_model.yaml
configs/trackers/: bytetrack_custom.yaml
docs/: REFACTORING_GUIDE.md
outputs/metrics/: README.md  results.csv
reports/: ablation_study_analysis.md  baseline_results.md  final_report.md  kaggle_submission_issue.md  next_steps.md  phase2_analysis.md  phase2_revision_strategy.md  phase2_strategy_revised.md  technical_understanding.md  yolov11_vs_yolov5_analysis.md
reports/ablation_study/: ablation_results.csv
src/: run_experiment.py
src/analysis/: visualize_training.py
src/data/: create_folds.py  prepare_yolo_format.py
src/evaluation/: compare_ablation.py  evaluate_teacher.py  evaluation_utils.py  f2_score.py
src/inference/: inference_utils.py  predict.py
src/labeling/: compare_labels.py  create_pseudo_dataset_config.py  florence_teacher.py  visualize_labels.py
(+14 files in other folders)
